confluence/istio/istio-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: confluence-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "wiki.shileizcc.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "wiki.shileizcc.com"
    tls:
      mode: SIMPLE
      serverCertificate: "/etc/istio/ingressgateway-certs/tls.crt"
      privateKey: "/etc/istio/ingressgateway-certs/tls.key"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: confluence-virtualservice
spec:
  hosts:
  - "wiki.shileizcc.com"
  gateways:
  - istio-system/confluence-gateway
  http:
  - route:
    - destination:
        host: confluence
        port:
          number: 8090
        subset: v1
        
  # - match:
  #   - port: 80
  #   route:
  #   - destination:
  #       host: myapp
  #       port:
  #         number: 8090
  # - match:
  #   - port: 80
  #   route:
  #   - destination:
  #       host: myapp
  #       port:
  #         number: 8091


  # - match:
  #   - uri:
  #       prefix: /synchrony-proxy
  #   redirect:
  #     uri: /synchrony-proxy
  #     authority: confluence-synchrony-proxy

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: confluence-destinationrule
spec:
  host: confluence
  subsets:
  - name: v1
    labels:
      version: v1
      
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: confluence-synchrony-proxy-virtualservice
# spec:
#   hosts:
#   - "confluence-synchrony-proxy"
#   http:
#   - route:
#     - destination:
#         host: confluence
#         port:
#           number: 8091
#         subset: v1

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: confluence-synchrony-proxy-destinationrule
# spec:
#   host: confluence
#   subsets:
#   - name: v1
#     labels:
#       version: v1
